[package]
name = "Alembic-banks-interface"
description = "Alembic banks RPC interface"
documentation = "https://docs.rs/Alembic-banks-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
Alembic-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "Alembic_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
