[package]
name = "Alembic-bench-streamer"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
crossbeam-channel = { workspace = true }
Alembic-net-utils = { workspace = true }
Alembic-streamer = { workspace = true }
Alembic-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
