[package]
name = "Alembic-clap-utils"
description = "Alembic utilities for the clap"
documentation = "https://docs.rs/Alembic-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = "2.33.0"
rpassword = { workspace = true }
Alembic-remote-wallet = { workspace = true }
Alembic-sdk = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "Alembic_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
