[package]
name = "Alembic-cli-config"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/Alembic-cli-config"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dirs-next = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
Alembic-clap-utils = { workspace = true }
Alembic-sdk = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
