[package]
name = "Alembic-client-test"
description = "Alembic RPC Test"
documentation = "https://docs.rs/Alembic-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
Alembic-client = { workspace = true }
Alembic-ledger = { workspace = true }
Alembic-measure = { workspace = true }
Alembic-merkle-tree = { workspace = true }
Alembic-metrics = { workspace = true }
Alembic-perf = { workspace = true }
Alembic-pubsub-client = { workspace = true }
Alembic-rayon-threadlimit = { workspace = true }
Alembic-rpc = { workspace = true }
Alembic-rpc-client = { workspace = true }
Alembic-rpc-client-api = { workspace = true }
Alembic-runtime = { workspace = true }
Alembic-sdk = { workspace = true }
Alembic-streamer = { workspace = true }
Alembic-test-validator = { workspace = true }
Alembic-transaction-status = { workspace = true }
Alembic-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
Alembic-logger = { workspace = true }
Alembic-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
