[package]
name = "Alembic-client"
description = "Alembic Client"
documentation = "https://docs.rs/Alembic-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
Alembic-connection-cache = { workspace = true }
Alembic-measure = { workspace = true }
Alembic-metrics = { workspace = true }
Alembic-pubsub-client = { workspace = true }
Alembic-quic-client = { workspace = true }
Alembic-rpc-client = { workspace = true, features = ["default"] }
Alembic-rpc-client-api = { workspace = true }
Alembic-rpc-client-nonce-utils = { workspace = true }
Alembic-sdk = { workspace = true }
Alembic-streamer = { workspace = true }
Alembic-thin-client = { workspace = true }
Alembic-tpu-client = { workspace = true, features = ["default"] }
Alembic-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
