[package]
name = "Alembic-connection-cache"
description = "Alembic Connection Cache"
documentation = "https://docs.rs/Alembic-connection-cache"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
Alembic-measure = { workspace = true }
Alembic-metrics = { workspace = true }
Alembic-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
rand_chacha = { workspace = true }
Alembic-logger = { workspace = true }
Alembic-net-utils = { workspace = true }
