[package]
name = "Alembic-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
Alembic-bench-tps = { workspace = true }
Alembic-client = { workspace = true }
Alembic-core = { workspace = true }
Alembic-faucet = { workspace = true }
Alembic-gossip = { workspace = true }
Alembic-logger = { workspace = true }
Alembic-measure = { workspace = true }
Alembic-net-utils = { workspace = true }
Alembic-perf = { workspace = true }
Alembic-quic-client = { workspace = true }
Alembic-rpc = { workspace = true }
Alembic-rpc-client = { workspace = true }
Alembic-sdk = { workspace = true }
Alembic-streamer = { workspace = true }
Alembic-tpu-client = { workspace = true }
Alembic-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
Alembic-local-cluster = { workspace = true }
