[package]
name = "Alembic-download-utils"
description = "Alembic Download Utils"
documentation = "https://docs.rs/Alembic-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
console = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
Alembic-runtime = { workspace = true }
Alembic-sdk = { workspace = true }

[dev-dependencies]
Alembic-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[lib]
crate-type = ["lib"]
name = "Alembic_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
