[package]
name = "Alembic-faucet"
description = "Alembic Faucet"
documentation = "https://docs.rs/Alembic-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
Alembic-clap-utils = { workspace = true }
Alembic-cli-config = { workspace = true }
Alembic-logger = { workspace = true }
Alembic-metrics = { workspace = true }
Alembic-sdk = { workspace = true }
Alembic-version = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "Alembic_faucet"

[[bin]]
name = "Alembic-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
