[package]
name = "Alembic-geyser-plugin-interface"
description = "The Alembic Geyser plugin interface."
documentation = "https://docs.rs/Alembic-geyser-plugin-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
Alembic-sdk = { workspace = true }
Alembic-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
